# WMINetworkTweak

./: CMakeLists.txt  README.md
NetworkTweakerApp/: assembly.xml  pom.xml
NetworkTweakerApp/src/main/java/com/example/network/tweaker/: NetworkTweaker.java  NetworkTweakerBase.java
NetworkTweakerApp/src/main/java/com/example/network/tweaker/controller/: AvailableNetworksController.java  UIController.java
NetworkTweakerApp/src/main/java/com/example/network/tweaker/util/: AlertDialog.java  DialogManager.java  IPTextField.java  NetworkCommand.java  NetworkCommandEnum.java  NetworkFlagsEnum.java  ResourceHelper.java  WiFiNetwork.java
NetworkTweakerApp/src/main/resources/: availableNetworks.fxml  ui.fxml
TweakNetworkBase/: CMakeLists.txt
TweakNetworkBase/include/: NetworkInfo.h  NetworkUtil.h  StringHelper.h  WiFiInfo.h  WiFiUtil.h
TweakNetworkBase/src/: NetworkUtil.cpp  StringHelper.cpp  WiFiUtil.cpp
TweakNetworkJNI/: CMakeLists.txt
TweakNetworkJNI/include/: com_example_network_tweaker_NetworkTweakerBase.h
TweakNetworkJNI/src/: com_example_network_tweaker_NetworkTweakerBase.cpp
